--- a/saturnia.yml
+++ b/saturnia.yml
@@ -1,16 +1,20 @@
+# saturnia.yml
+# Arquivo de orquestração declarativa para a plataforma Saturnia
+
 version: "1.0"
 
+# Configuração global
 deployment:
   project: saturnia-demo
   environment: production
   defaultNetwork: saturnia-net
-  autoExpose: true
-  entryService: web
+  autoExpose: true     # Se true, o primeiro serviço com porta exposta será publicado automaticamente
+  entryService: web    # Define explicitamente qual é o ponto de entrada HTTP
   domains:
     - domain: app.saturnia.io
       service: web
-      proxy: true
-      ssl: true
+      proxy: true            # se true, irá criar automaticamente no nginx npm
+      ssl: true              # ativa ou não SSL via Nginx NPM
       forceHttps: true
     - domain: api.saturnia.io
       service: api
@@ -29,7 +33,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Production
     depends_on:
       - api
-    expose: true
+    expose: true   # esse container receberá tráfego externo
 
   api:
     build:
@@ -54,12 +58,23 @@ services:
       - POSTGRES_DB=saturnia
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
-    expose: false
+    expose: false   # não precisa ser exposto externamente
 
 volumes:
-  logs:
-  db-data:
+  logs: {}
+  db-data: {}
 
 networks:
   saturnia-net:
     driver: bridge
+
+# Futuro: healthchecks, autoscale, resources
+# healthchecks:
+#   web:
+#     path: /health
+#     interval: 30s
+
+# resources:
+#   web:
+#     cpu: "0.5"
+#     memory: "512m"
